배지 별로 나눠서 출력
